--- a/SpringEcom/src/main/resources/application.properties
+++ b/SpringEcom/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.application.name=SpringEcom
 
 spring.datasource.url=jdbc:postgresql://localhost:5432/demo
 
-spring.datasource.username=postgres
-spring.datasource.password=7398
+spring.datasource.username=XXXXXX
+spring.datasource.password=XXXXX
 spring.jpa.hibernate.ddl-auto=update
 
